# python-runtime

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml  repomix.config.json
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: devtools.yml  python.yml  version.yml
binmod/: __init__.py
