[project]
name = "binmod"
version = "0.1.0"
description = "A Python runtime for Binmod WebAssembly modules"
readme = "README.md"
authors = [
    {name = "Tim Pogue", email = "me@pogue.dev"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "wasmtime>=39.0.0",
]

[project.urls]
repository = "https://github.com/binmod-io/python-runtime"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.12.0",
    "pre-commit>=4.5.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["binmod"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
log_cli = "True"
log_auto_indent = "False"

[tool.coverage.run]
source = ["binmod"]

[tool.coverage.report]
ignore_errors = "true"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
exclude = ["tests", "examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
lines-after-imports = 2
